--- a/Designs/UIImageViewAnimations/UIViewAnimations/Base.lproj/Main.storyboard
+++ b/Designs/UIImageViewAnimations/UIViewAnimations/Base.lproj/Main.storyboard
@@ -18,19 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="dAH-dP-H99">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dAH-dP-H99">
                                 <rect key="frame" x="10" y="209" width="355" height="215"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GXj-k6-Riw" userLabel="Heart Image View">
-                                        <rect key="frame" x="0.0" y="0.0" width="161" height="215"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GXj-k6-Riw" userLabel="Heart Image View">
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="215"/>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rp3-tN-z1O" userLabel="Ryu Image View">
-                                        <rect key="frame" x="182" y="0.0" width="173" height="215"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rp3-tN-z1O" userLabel="Ryu Image View">
+                                        <rect key="frame" x="180" y="0.0" width="175" height="215"/>
                                     </imageView>
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.20000000000000001" green="0.66666666669999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="dAH-dP-H99" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="5z2-3k-eWz"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dAH-dP-H99" secondAttribute="trailing" constant="10" id="ByI-Jb-rUL"/>
